// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reminder not passed in renders correctly 1`] = `
Array [
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View />
  </View>,
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "flex": 1,
          "opacity": 1,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "transform": Array [
            Object {
              "translateY": 378,
            },
          ],
        }
      }
    >
      <DateTimePicker
        locale="en-TEST"
        minimumDate={2018-01-02T00:39:39.887Z}
        mode="datetime"
        onChange={[Function]}
        style={
          Object {
            "borderTopColor": "#ccc",
            "borderTopWidth": 1,
            "marginTop": 60,
          }
        }
        testID="DateTimePicker"
        value={2018-01-02T00:39:39.887Z}
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ReminderRepeatButtonDaily"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "borderRadius": 35,
                    "height": 70,
                    "margin": 8,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "width": 70,
                  },
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#B4B6BA",
                    "borderWidth": 1,
                  },
                ],
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ],
                ]
              }
            >
              Daily
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ReminderRepeatButtonWeekly"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "borderRadius": 35,
                    "height": 70,
                    "margin": 8,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "width": 70,
                  },
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#B4B6BA",
                    "borderWidth": 1,
                  },
                ],
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ],
                ]
              }
            >
              Weekly
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ReminderRepeatButtonMonthly"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "borderRadius": 35,
                    "height": 70,
                    "margin": 8,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "width": 70,
                  },
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#B4B6BA",
                    "borderWidth": 1,
                  },
                ],
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ],
                ]
              }
            >
              Monthly
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "height": 60,
            "paddingHorizontal": 20,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#007AFF",
                        "fontSize": 16,
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ],
                  ],
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "flex": 1,
                "fontSize": 16,
                "textAlign": "center",
              },
            ]
          }
        >
          Date
        </Text>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#007AFF",
                      "fontSize": 16,
                      "fontWeight": "normal",
                      "letterSpacing": 1,
                    },
                  ],
                ]
              }
            >
              Done
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
]
`;

exports[`reminder passed in renders correctly 1`] = `
Array [
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View />
  </View>,
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "flex": 1,
          "opacity": 1,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "transform": Array [
            Object {
              "translateY": 378,
            },
          ],
        }
      }
    >
      <DateTimePicker
        locale="en-TEST"
        minimumDate={2018-01-02T00:39:39.887Z}
        mode="datetime"
        onChange={[Function]}
        style={
          Object {
            "borderTopColor": "#ccc",
            "borderTopWidth": 1,
            "marginTop": 60,
          }
        }
        testID="DateTimePicker"
        value={2015-11-13T20:52:21.990Z}
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ReminderRepeatButtonDaily"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "borderRadius": 35,
                    "height": 70,
                    "margin": 8,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "width": 70,
                  },
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#B4B6BA",
                    "borderWidth": 1,
                  },
                ],
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ],
                ]
              }
            >
              Daily
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ReminderRepeatButtonWeekly"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "borderRadius": 35,
                    "height": 70,
                    "margin": 8,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "width": 70,
                  },
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#B4B6BA",
                    "borderWidth": 1,
                  },
                ],
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ],
                ]
              }
            >
              Weekly
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ReminderRepeatButtonMonthly"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "borderRadius": 35,
                    "height": 70,
                    "margin": 8,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "width": 70,
                  },
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#B4B6BA",
                    "borderWidth": 1,
                  },
                ],
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ],
                ]
              }
            >
              Monthly
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "height": 60,
            "paddingHorizontal": 20,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#007AFF",
                        "fontSize": 16,
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ],
                  ],
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "flex": 1,
                "fontSize": 16,
                "textAlign": "center",
              },
            ]
          }
        >
          Date
        </Text>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#007AFF",
                      "fontSize": 16,
                      "fontWeight": "normal",
                      "letterSpacing": 1,
                    },
                  ],
                ]
              }
            >
              Done
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
]
`;
